# rlu

./: .clang-format  .gitignore  Makefile.am  README.md  benchmark.sh  configure.ac  perf.data.old
benchmarks/: Makefile.am  bench-list.cc  bench-rlu-list.cc  benchmark.cc  benchmark.hh  rcu-list.cc  rcu-list.hh  rlu-list.cc
results/: benchmark_rcu_0.02.txt  benchmark_rcu_0.2.txt  benchmark_rcu_0.4.txt  benchmark_rlu_0.02.txt  benchmark_rlu_0.2.txt  benchmark_rlu_0.4.txt  data.csv  plot.ipynb
src/: .clang-format  Makefile.am  list.cc  list.hh  rlu.cc  rlu.hh
tests/: Makefile.am  linked-list  linked-list.cc
